refined dynamic python module loading, supports excludes

--- a/config/lens.cfg
+++ b/config/lens.cfg
@@ -20,8 +20,8 @@ pcaps = $LENS_HOME/samples/pcaps
 [database]
 # dbtype may be sqlite or mongo.
 # Below is a sqlite config.  
-dbtype = sqlite
-sqlite_location = $LENS_HOME/lens.db
+# dbtype = sqlite
+# sqlite_location = $LENS_HOME/lens.db
 
 # To switch to MongoDB, comment out the lines above for sqlite and uncomment the lines below.
 # dbtype = mongo
@@ -29,6 +29,11 @@ sqlite_location = $LENS_HOME/lens.db
 # dbport = 27017
 # dbuser = <insert username>
 # dbpw = <insert password>
+dbtype = mongo
+dbhost = localhost
+dbport = 27017
+dbuser = 
+dbpw = 
 
 # Store files in db.  This is set to no for sqlite databases.  If using mongodb, 
 # user has the option to store samples in the database.  The benefit of storing samples
